# restic-gui-backend

./: .gitignore  Cargo.toml  run_script.sh
frontend/: README.md  package-lock.json  package.json  ttt.sublime-workspace  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  interfaces.ts  main.ts
frontend/src/components/: AllConfigs.vue  HelloWorld.vue  ListItem.vue  PreviewElems.vue
src/: automated_backups.rs  config_store.rs  main.rs
static/: index.html  restic-web-gui.js  restic-web-gui.wasm
