[package]
name = "restic-gui-backend"
version = "0.1.0"
authors = ["8176135 <8176135@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
restic-interfacer = {path = "../restic-interfacer"}
globset = "*"
lazy_static = "*"
error-chain = "*"
base64 = "0.11"
chrono = "0.4.9"
color-backtrace = "0.2.3"
